--- a/express-app/views/index.pug
+++ b/express-app/views/index.pug
@@ -21,7 +21,7 @@ html
   body
     .jumbotron.jumbotron-fluid
       .container
-        h1.display-4 Trello Board with jQuery
+        h1.display-4 Gary's Trello Board Deluxe
     |     
     section
       .d-flex.justify-content-center
